--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                             <span class="logo-web">Web</span><span class="logo-nav">Studio</span>
                     </a>
                         <ul class="list-nav">
-                            <li class="item-nav"><a href="index.html" class="site-nav">Студія</a></li>
-                            <li class="item-nav"><a href="portfolio.html" class="site-nav-box">Портфоліо</a></li>
+                            <li class="item-nav"><a href="index.html" class="site-nav curent">Студія</a></li>
+                            <li class="item-nav"><a href="portfolio.html" class="site-nav">Портфоліо</a></li>
                             <li class="item-nav"><a href="index.html" class="site-nav">Контакти</a></li>
                         
                         </ul>
@@ -152,8 +152,8 @@
                         <address Class="address">
                             <ul class="list-address">
                                 <li>  <a href="https://goo.gl/maps/jQNhuYYuZes4eGtNA" target="_blank" rel="noreferrer noopener" class="link-address">   м. Київ, пр-т Лесі Українки, 26 </a></li>
-                                <li> <a href="mailto:info@devstudio.com" class="link-address">info@devstudio.com</a></li>
-                                <li> <a href="tel:+380961111111" class="link-address">+38(096) 111-11-11</a> </li>
+                                <li> <a href="mailto:info@devstudio.com" class="link-address-mail">info@devstudio.com</a></li>
+                                <li> <a href="tel:+380961111111" class="link-address-tel">+38(096) 111-11-11</a> </li>
                             </ul>
                         </address>
                 </div>
