--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,8 @@
                         <span class="logo-web">Web</span><span class="logo-nav">Studio</span>
                     </a>
                     <ul class="list-nav">
-                        <li class="item-nav"><a href="index.html" class="site-nav-box">Студія</a></li>
-                        <li class="item-nav"><a href="portfolio.html" class="site-nav">Портфоліо</a></li>
+                        <li class="item-nav"><a href="index.html" class="site-nav ">Студія</a></li>
+                        <li class="item-nav"><a href="portfolio.html" class="site-nav curent">Портфоліо</a></li>
                         <li class="item-nav"><a href="index.html" class="site-nav">Контакти</a></li>
             
                     </ul>
@@ -46,81 +46,97 @@
             </div>
                 <!--Gallery-->
                 <div class="contener gallery-contener">
-                    <h2 class="visually-hidden">Gallery</h2>
+                    <p class="visually-hidden">Gallery</p>
                   <ul class="list-gallery">
                     <li class="item-gallery">
-                        <a href="" class="">
+                        <a href="" class="link-gallery">
                         <img src="./images/img21.jpg" 
                         alt="фото сотрудников на ноутбуке" 
                         width="370"
                         height="294">
-                        <h3 class="title-gallery">Технокряк</h3>
+                        <h2 class="title-gallery">Технокряк</h2>
                         <p class="text-gallery">Веб-сайт</p>
                         </a>
                     </li>
                     <li class="item-gallery">
+                        <a href="" class="link-gallery">
                         <img src="./images/img22.jpg"
                          alt="Два баскетболиста борятся за мяч"
                         width="370"
                         height="294">
-                        <h3 class="title-gallery">Постер New Orlean vs Golden Star</h3>
+                        <h2 class="title-gallery">Постер New Orlean vs Golden Star</h2>
                         <p class="text-gallery">Дизайн</p>
+                        </a>
                     </li>
                     <li class="item-gallery">
+                        <a href="" class="link-gallery">
                         <img src="./images/img23.jpg"
                          alt="логотип ресторана Seafood"
                          width="370"
                         height="294" >
-                        <h3 class="title-gallery">Ресторан Seafood</h3>
+                        <h2 class="title-gallery">Ресторан Seafood</h2>
                         <p class="text-gallery">Додаток</p>
+                        </a>
                     </li>
                     <li class="item-gallery">
+                        <a href="" class="link-gallery">
                         <img src="./images/img24.jpg"
                             alt="Изображение наушников"
                             width="370"
                             height="294" >
-                        <h3 class="title-gallery">Проєкт Prime</h3>
+                        <h2 class="title-gallery">Проєкт Prime</h2>
                         <p class="text-gallery">Маркетинг</p>
+                        </a>
                     </li>
                     <li class="item-gallery">
+                        <a href="" class="link-gallery">
                         <img src="./images/img25.jpg"
                             alt="Две картоные корбки белого и бежевого цвета"
                             width="370"
                             height="294">
-                        <h3 class="title-gallery">Проєкт Boxes</h3>
+                        <h2 class="title-gallery">Проєкт Boxes</h2>
                         <p class="text-gallery">Додаток</p>
+                        </a>
                     </li>
                     <li class="item-gallery">
+                        <a href="" class="link-gallery">
                         <img src="./images/img26.jpg"
                          alt="Монитор компютера с открытым сайтом"
                          width="370"
                         height="294">
-                        <h3 class="title-gallery">Inspiration has no Borders</h3>
+                        <h2 class="title-gallery">Inspiration has no Borders</h2>
                         <p class="text-gallery">Веб-сайт</p>
+                        </a>
                     </li>
                     <li class="item-gallery">
+                        <a href="" class="link-gallery">
                         <img src="./images/img27.jpg"
                          alt="Открытая книга"
                           width="370"
                         height="294">
-                        <h3 class="title-gallery">Видання Limited Edition</h3>
+                        <h2 class="title-gallery">Видання Limited Edition</h2>
                         <p class="text-gallery">Дизайн</p>
+                        </a>
                     </li>
                     <li class="item-gallery">
+                        <a href="" class="link-gallery">
                         <img src="./images/img28.jpg"
                          alt="Бирка от товара"
                           width="370"
                         height="294">
-                        <h3 class="title-gallery">Проєкт LAB</h3>
+                        <h2 class="title-gallery">Проєкт LAB</h2>
                         <p class="text-gallery">Маркетинг</p>
+                        </a>
                     </li>
                     <li class="item-gallery" >
+                        <a href="" class="link-gallery">
                         <img src="./images/img29.jpg"
                          alt="Человек работает на ноутбуке"
                          width="370"
                         height="294">
-                        <h3 class="title-gallery">Growing Business</h3>
+                        <h2 class="title-gallery">Growing Business</h2>
                         <p class="text-gallery">Додаток</p>
+                        </a>
                     </li>
                   </ul>  
                 </div>
@@ -136,8 +152,8 @@
                     <ul class="list-address">
                         <li> <a href="https://goo.gl/maps/jQNhuYYuZes4eGtNA" target="_blank" rel="noreferrer noopener"
                                 class="link-address"> м. Київ, пр-т Лесі Українки, 26 </a></li>
-                        <li> <a href="mailto:info@devstudio.com" class="link-address">info@devstudio.com</a></li>
-                        <li> <a href="tel:+380961111111" class="link-address">+38(096) 111-11-11</a> </li>
+                        <li> <a href="mailto:info@devstudio.com" class="link-address-mail">info@devstudio.com</a></li>
+                        <li> <a href="tel:+380961111111" class="link-address-tel">+38(096) 111-11-11</a> </li>
                     </ul>
                 </address>
             </div>
