--- a/portfolio.html
+++ b/portfolio.html
@@ -32,8 +32,11 @@
                 </nav>
             </div> 
         </header>
+
+        <!--aside-->
+
         <main>
-                 <!--aside-->
+         <section>
             <div class="contener aside-contener">
                 <h1 class="visually-hidden">Content</h1>
                 <ul class="list-aside">
@@ -43,9 +46,9 @@
                     <li class="item-aside"><button class="button">Дизайн</button></li>
                     <li class="item-aside"><button class="button">Маркетинг</button></li>
                 </ul>
-            </div>
+           
                 <!--Gallery-->
-                <div class="contener gallery-contener">
+            
                     <p class="visually-hidden">Gallery</p>
                   <ul class="list-gallery">
                     <li class="item-gallery">
@@ -54,19 +57,23 @@
                         alt="фото сотрудников на ноутбуке" 
                         width="370"
                         height="294">
+                        </a>
+                    <div class="work-gallery">
                         <h2 class="title-gallery">Технокряк</h2>
                         <p class="text-gallery">Веб-сайт</p>
-                        </a>
+                    </div>
                     </li>
                     <li class="item-gallery">
                         <a href="" class="link-gallery">
-                        <img src="./images/img22.jpg"
-                         alt="Два баскетболиста борятся за мяч"
-                        width="370"
-                        height="294">
+                            <img src="./images/img22.jpg"
+                            alt="Два баскетболиста борятся за мяч"
+                            width="370"
+                            height="294">
+                        </a>
+                    <div class="work-gallery">
                         <h2 class="title-gallery">Постер New Orlean vs Golden Star</h2>
                         <p class="text-gallery">Дизайн</p>
-                        </a>
+                    </div>    
                     </li>
                     <li class="item-gallery">
                         <a href="" class="link-gallery">
@@ -74,9 +81,11 @@
                          alt="логотип ресторана Seafood"
                          width="370"
                         height="294" >
+                        </a>
+                    <div class="work-gallery">
                         <h2 class="title-gallery">Ресторан Seafood</h2>
                         <p class="text-gallery">Додаток</p>
-                        </a>
+                    </div>
                     </li>
                     <li class="item-gallery">
                         <a href="" class="link-gallery">
@@ -84,9 +93,11 @@
                             alt="Изображение наушников"
                             width="370"
                             height="294" >
+                        </a>
+                    <div class="work-gallery">
                         <h2 class="title-gallery">Проєкт Prime</h2>
                         <p class="text-gallery">Маркетинг</p>
-                        </a>
+                    </div>
                     </li>
                     <li class="item-gallery">
                         <a href="" class="link-gallery">
@@ -94,9 +105,11 @@
                             alt="Две картоные корбки белого и бежевого цвета"
                             width="370"
                             height="294">
+                        </a>
+                    <div class="work-gallery">
                         <h2 class="title-gallery">Проєкт Boxes</h2>
                         <p class="text-gallery">Додаток</p>
-                        </a>
+                    </div>
                     </li>
                     <li class="item-gallery">
                         <a href="" class="link-gallery">
@@ -104,9 +117,11 @@
                          alt="Монитор компютера с открытым сайтом"
                          width="370"
                         height="294">
+                        </a>
+                    <div class="work-gallery">
                         <h2 class="title-gallery">Inspiration has no Borders</h2>
                         <p class="text-gallery">Веб-сайт</p>
-                        </a>
+                    </div>
                     </li>
                     <li class="item-gallery">
                         <a href="" class="link-gallery">
@@ -114,9 +129,11 @@
                          alt="Открытая книга"
                           width="370"
                         height="294">
+                        </a>
+                    <div class="work-gallery">
                         <h2 class="title-gallery">Видання Limited Edition</h2>
                         <p class="text-gallery">Дизайн</p>
-                        </a>
+                    </div>
                     </li>
                     <li class="item-gallery">
                         <a href="" class="link-gallery">
@@ -124,9 +141,11 @@
                          alt="Бирка от товара"
                           width="370"
                         height="294">
+                        </a>
+                    <div class="work-gallery">
                         <h2 class="title-gallery">Проєкт LAB</h2>
                         <p class="text-gallery">Маркетинг</p>
-                        </a>
+                    </div>
                     </li>
                     <li class="item-gallery" >
                         <a href="" class="link-gallery">
@@ -134,12 +153,15 @@
                          alt="Человек работает на ноутбуке"
                          width="370"
                         height="294">
+                        </a>
+                    <div class="work-gallery">
                         <h2 class="title-gallery">Growing Business</h2>
                         <p class="text-gallery">Додаток</p>
-                        </a>
+                    </div>
                     </li>
                   </ul>  
                 </div>
+            </section>    
         </main>
         <footer class="footer">
             <div class="contener contener-footer">
@@ -150,10 +172,10 @@
                 </a>
                 <address Class="address">
                     <ul class="list-address">
-                        <li> <a href="https://goo.gl/maps/jQNhuYYuZes4eGtNA" target="_blank" rel="noreferrer noopener"
+                        <li class="item-addrees" > <a href="https://goo.gl/maps/jQNhuYYuZes4eGtNA" target="_blank" rel="noreferrer noopener"
                                 class="link-address"> м. Київ, пр-т Лесі Українки, 26 </a></li>
-                        <li> <a href="mailto:info@devstudio.com" class="link-address-mail">info@devstudio.com</a></li>
-                        <li> <a href="tel:+380961111111" class="link-address-tel">+38(096) 111-11-11</a> </li>
+                        <li class="item-addrees"> <a href="mailto:info@devstudio.com" class="link-address link-address-mail">info@devstudio.com</a></li>
+                        <li class="item-addrees"> <a href="tel:+380961111111" class="link-address link-address-tel">+38(096) 111-11-11</a> </li>
                     </ul>
                 </address>
             </div>
