--- a/index.html
+++ b/index.html
@@ -31,15 +31,14 @@
                             </li>
                         
                         </ul>
-                    
-                <div class="small-nav">
-                    <svg class="nav-phone" width="20" height="20">
-                        <use href="./symbol-defs.svg#instagram"></use>
-                    </svg>
-                    <a href="tel:+380961111111" class="link-nav">+38(096) 111-11-11</a>
-                    <a href="mailto:info@devstudio.com" class="link-nav-box">info@devstudio.com</a>
-                </div>
                 </nav>
+                    <div class="small-nav">
+                        <!--<svg class="nav-phone" width="20" height="20">
+                            <use href="./images/icons.svg#phone"></use>
+                        </svg>-->
+                        <a href="tel:+380961111111" class="link-nav">+38(096) 111-11-11</a>
+                        <a href="mailto:info@devstudio.com" class="link-nav-box">info@devstudio.com</a>
+                    </div>
             </div>
         </header>
          <main>
@@ -53,6 +52,9 @@
             <!--priorities-->   
             <section class="priorities">
                 <div class="contener contener-priorities">
+                    <svg width="100px" height="60px">
+                        <use href="./images/iconscolor.svg.svg#icon-antenna"></use>
+                    </svg>
                     <h2 class="visually-hidden">Peculiarities</h2>
                     <ul class="list-priorities" >
                         <li>
@@ -120,9 +122,9 @@
                             <div class="name">
                             <h3 class="title-name">Ігор Дем'яненко</h3>
                             <p class="text-name">Product Designer</p>
-                            <svg  width="20px" height="20px">
+                            <!--<svg  width="20px" height="20px">
                                 <use href="./images/icons.svg#instagram"></use>
-                            </svg>
+                            </svg>-->
                             </div>
                         </li>
                         <li class="item-comand">
@@ -131,8 +133,10 @@
                             width="270"
                             height="260"
                             />
+                            <div class="name">
                             <h3 class="title-name">Ольга Рєпіна</h3>
                             <p  class="text-name">Frontend Developer</p>
+                            </div>
                         </li>
                         <li class="item-comand">
                             <img  src="./images/img-13.jpg"
@@ -140,8 +144,10 @@
                             width="270"
                             height="260"
                             />
+                            <div class="name">
                             <h3 class="title-name">Микола Тарасов</h3>
                             <p  class="text-name">Marketing</p>
+                            </div>
                         </li>
                         <li class="item-comand">
                             <img  src="./images/img-14.jpg"
@@ -149,11 +155,17 @@
                             width="270"
                             height="260"
                             />
+                            <div class="name">
                             <h3 class="title-name">Михайло Єрмаков</h3>
                             <p  class="text-name">UI Designer</p> 
+                            </div>
                         </li>    
                     </ul>
                 </div>
+            </section>
+            <!--client-->
+            <section class="client">
+                <h2 class="title-client">Постійні клієнти</h2>
             </section>
         </main> 
             <!--Contact details--> 
@@ -171,6 +183,12 @@
                                 <li class="item-addrees"> <a href="tel:+380961111111" class="link-address link-address-tel">+38(096) 111-11-11</a> </li>
                             </ul>
                         </address>
+                </div>
+                <div>
+                    <h2 class="footer-cosial">приєднуйтесь</h2>
+                    <!--<svg width="20px" heidth="20px">
+                        <use href="./images/icons.svg#instagram"></use>
+                    </svg>-->
                 </div>
             </footer>
     </body>
