--- a/portfolio.html
+++ b/portfolio.html
@@ -27,17 +27,16 @@
                     </ul>
                  </nav>
                     <div class="small-nav">
-                        <div class="contact-nav">
-                        <svg class="nav-phone" width="16" height="12">
-                            <use href="./images/icons.svg#mail"></use>
-                        </svg>
-                        <a href="mailto:info@devstudio.com" class="link-nav-box">info@devstudio.com</a>
-                        </div>
-                        <div class="contact-nav"></div>
-                        <svg class="nav-phone" width="10" height="16">
-                            <use href="./images/icons.svg#phone"></use>
-                        </svg>
-                        <a href="tel:+380961111111" class="link-nav">+38(096) 111-11-11</a>
+                        <a href="mailto:info@devstudio.com" class="link-nav-box">
+                            <svg class="nav-phone" width="16" height="12">
+                                <use href="./images/icons.svg#mail"></use>
+                            </svg>
+                            info@devstudio.com</a>
+                        <a href="tel:+380961111111" class="link-nav">
+                            <svg class="nav-phone" width="10" height="16">
+                                <use href="./images/icons.svg#phone"></use>
+                            </svg>
+                            +38(096) 111-11-11</a>
                         </div>
                     </div>
             </div> 
