--- a/portfolio.html
+++ b/portfolio.html
@@ -62,14 +62,21 @@
                   <ul class="list-gallery">
                     <li class="item-gallery">
                         <a href="" class="link-gallery">
-                        <img src="./images/img21.jpg" 
-                        alt="фото сотрудников на ноутбуке" 
-                        width="370"
-                        height="294">
+                            <div class="trans-gallery">
+                            <img src="./images/img21.jpg" 
+                            alt="фото сотрудников на ноутбуке" 
+                            width="370"
+                            height="294">
+                             <div class="anime-gallery">
+                                <p class="text-anime">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                вичерпні відомості про компанію чи приватну особу.</p>
+                             </div>   
+                            </div>
                         <div class="work-gallery">
                             <h2 class="title-gallery">Технокряк</h2>
                             <p class="text-gallery">Веб-сайт</p>
                         </div>
+                        
                         </a>
                     
                     </li>
