--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
                     </a>
                         <ul class="list-nav">
                             <li class="item-nav">
-                              
+                                <div class="page-nav">
                                 <a href="index.html" class="site-nav curent">Студія</a>
+                                </div>
                             </li>
                             <li class="item-nav">
                                 <a href="portfolio.html" class="site-nav">Портфоліо</a>
@@ -52,11 +53,10 @@
          <main>
             <!--heroy-->
             <section class="heroy">
-                
                 <div class="contener contener-heroy">
                     <h1 class="title-heroy">Ефективні рішення для вашого бізнесу</h1>
-                    <button type="button">Замовити послугу</button>
-                </div>
+                    <button type="button"data-modal-open>Замовити послугу</button>
+                    </div>
             </section>
             <!--priorities-->   
             <section class="priorities">
@@ -115,6 +115,9 @@
                             width="370"
                             height="294"
                             />
+                            <div class="info-work">
+                            <p class="page-work">Десктопні додатки</p>
+                            </div>
                         </li>  
                         <li class="item-work">
                             <img
@@ -123,6 +126,9 @@
                             width="370"
                             height="294"
                             />
+                            <div class="info-work">
+                            <p class="page-work">Мобільні додатки</p>
+                            </div>
                         </li>
                         <li class="item-work">
                             <img
@@ -131,6 +137,9 @@
                             width="370"
                             height="294"
                             />
+                            <div class="info-work">
+                            <p class="page-work">Дизайнерські рішення</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -358,6 +367,11 @@
                 </ul>
             </div>
             </section>
+            <div class="backdrop is-hidden" data-modal>
+                <div class="modal">
+                    <button class="btn-modal" data-modal-close>&#10005;</button>
+                </div>
+            </div>
         </main> 
 
             <!--Contact details--> 
@@ -413,5 +427,6 @@
                     </div>
                 </div>
             </footer>
+        <script src="./js/modal.js"></script>
     </body>
 </html>
