--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
                                 <use href="./images/icons.svg#phone"></use>
                             </svg>
                             +38(096) 111-11-11</a>
-                        </div>
+                       
                     </div>
             </div> 
         </header>
@@ -82,10 +82,15 @@
                     </li>
                     <li class="item-gallery">
                         <a href="" class="link-gallery">
+                            <div class="trans-gallery">
                             <img src="./images/img22.jpg"
                             alt="Два баскетболиста борятся за мяч"
                             width="370"
                             height="294">
+                            <div class="anime-gallery">
+                                <p class="text-anime"></p>
+                            </div>
+                            </div>
                             <div class="work-gallery">
                                 <h2 class="title-gallery">Постер New Orlean vs Golden Star</h2>
                                 <p class="text-gallery">Дизайн</p>
@@ -95,10 +100,15 @@
                     </li>
                     <li class="item-gallery">
                         <a href="" class="link-gallery">
+                            <div class="trans-gallery">
                         <img src="./images/img23.jpg"
                          alt="логотип ресторана Seafood"
                          width="370"
                         height="294" >
+                        <div class="anime-gallery">
+                                <p class="text-anime"></p>
+                            </div>
+                            </div>
                         <div class="work-gallery">
                             <h2 class="title-gallery">Ресторан Seafood</h2>
                             <p class="text-gallery">Додаток</p>
@@ -108,10 +118,15 @@
                     </li>
                     <li class="item-gallery">
                         <a href="" class="link-gallery">
+                             <div class="trans-gallery">
                         <img src="./images/img24.jpg"
                             alt="Изображение наушников"
                             width="370"
                             height="294" >
+                            <div class="anime-gallery">
+                                <p class="text-anime"></p>
+                            </div>
+                            </div>
                             <div class="work-gallery">
                                 <h2 class="title-gallery">Проєкт Prime</h2>
                                 <p class="text-gallery">Маркетинг</p>
@@ -121,10 +136,15 @@
                     </li>
                     <li class="item-gallery">
                         <a href="" class="link-gallery">
+                            <div class="trans-gallery">
                         <img src="./images/img25.jpg"
                             alt="Две картоные корбки белого и бежевого цвета"
                             width="370"
                             height="294">
+                            <div class="anime-gallery">
+                                <p class="text-anime"></p>
+                            </div>
+                            </div>
                             <div class="work-gallery">
                                 <h2 class="title-gallery">Проєкт Boxes</h2>
                                 <p class="text-gallery">Додаток</p>
@@ -134,10 +154,15 @@
                     </li>
                     <li class="item-gallery">
                         <a href="" class="link-gallery">
+                            <div class="trans-gallery">
                             <img src="./images/img26.jpg"
                             alt="Монитор компютера с открытым сайтом"
                             width="370"
                             height="294">
+                            <div class="anime-gallery">
+                                <p class="text-anime"></p>
+                            </div>
+                            </div>
                             <div class="work-gallery">
                                 <h2 class="title-gallery">Inspiration has no Borders</h2>
                                 <p class="text-gallery">Веб-сайт</p>
@@ -147,10 +172,15 @@
                     </li>
                     <li class="item-gallery">
                         <a href="" class="link-gallery">
+                            <div class="trans-gallery">
                             <img src="./images/img27.jpg"
                             alt="Открытая книга"
                             width="370"
                             height="294">
+                            <div class="anime-gallery">
+                                <p class="text-anime"></p>
+                            </div>
+                            </div>
                             <div class="work-gallery">
                                 <h2 class="title-gallery">Видання Limited Edition</h2>
                                 <p class="text-gallery">Дизайн</p>
@@ -160,10 +190,15 @@
 
                     <li class="item-gallery">
                         <a href="" class="link-gallery">
+                            <div class="trans-gallery">
                             <img src="./images/img28.jpg"
                             alt="Бирка от товара"
                             width="370"
                             height="294">
+                            <div class="anime-gallery">
+                                <p class="text-anime"></p>
+                            </div>
+                            </div>
                             <div class="work-gallery">
                                 <h2 class="title-gallery">Проєкт LAB</h2>
                                 <p class="text-gallery">Маркетинг</p>
@@ -173,10 +208,15 @@
 
                     <li class="item-gallery" >
                         <a href="" class="link-gallery">
+                            <div class="trans-gallery">
                             <img src="./images/img29.jpg"
                             alt="Человек работает на ноутбуке"
                             width="370"
                             height="294">
+                            <div class="anime-gallery">
+                                <p class="text-anime"></p>
+                            </div>
+                            </div>
                             <div class="work-gallery">
                                 <h2 class="title-gallery">Growing Business</h2>
                                 <p class="text-gallery">Додаток</p>
