--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <section class="heroy">
                 <div class="contener contener-heroy">
                     <h1 class="title-heroy">Ефективні рішення для вашого бізнесу</h1>
-                    <button type="button" data-modal-open>Замовити послугу</button>
+                    <button class="btn" type="button" data-modal-open>Замовити послугу</button>
                     </div>
             </section>
             <!--priorities-->   
@@ -369,7 +369,54 @@
             </section>
             <div class="backdrop is-hidden" data-modal>
                 <div class="modal">
-                    <button class="btn-modal" data-modal-close>&#10005;</button>
+                    <form class="modal-window" name="modal-window" autocomplete="on" novalidate>
+                        <Strong class="modal-title">Залиште свої дані, ми вам передзвонимо</Strong>
+                        <div class="modal-user">
+                        <label class="modal-field">
+                            <input type="text" name="user-name" class="modal-input" />
+                            <span class="modal-name">Ім'я</span>
+                            <svg class="modal-icon" width="18"  height="18">
+                            <use href="./images/icons.svg#Name"></use>
+                            </svg>
+                        </label>
+                        <label class="modal-field">
+                            <input type="tel" name="user-phone" class="modal-input"/>
+                            <span class="modal-name">Телефон</span>
+                            <svg class="modal-icon" width="18" height="18">
+                                <use href="./images/icons.svg#Tel"></use>
+                            </svg>
+                        </label>
+                        <label class="modal-field">
+                            <input type="email" name="user-email" class="modal-input" />
+                            <span class="modal-name">Пошта</span>
+                            <svg class="modal-icon" width="18" height="18">
+                            <use href="./images/icons.svg#email"></use>
+                            </svg>
+                        </label>
+                        <label class="modal-field">
+                            
+                            <textarea class="modal-textarea" rows="5" placeholder="Введіть текст"></textarea>
+                            <span class="modal-name">Коментар</span>
+                        </label>
+                        </div>
+                        <div class="modal-checkbox">
+                        <label class="modal-chec">
+                            <input class="modal-box visually-hidden" type="checkbox" name="chec-btm" />
+                                <svg class="check-icon" width="16" height="15">
+                                    <use class="icon-square" href="./images/icons.svg#square"></use>
+                                    <use class="icon-blu-square"  href="./images/iconscolor.svg.svg#blu-square"></use>
+                                </svg>    
+                            <span class="modal-list"> Погоджуюся з розсилкою та приймаю 
+                                <a href="" target="_blank" class="modal-pravila">Умови договору</a> </span>
+                        </label>
+                        </div>
+                         <button class="btn modal-btn" type="submit">Відправити</button>
+                    </form>
+                    <button class="btn-modal" data-modal-close>
+                        <svg width="18" height="18">
+                        <use href="./images/icons.svg#close"></use>
+                    </svg>
+                </button>
                 </div>
             </div>
         </main> 
@@ -425,6 +472,20 @@
                             </li>
                         </ul>
                     </div>
+                 
+                     <form class="subscription" name="footer-user" autocomplete="on" novalidate>
+                        <p class="footer-cosial">Підпишіться на розсилку</p>
+                        <div class="subscription-inter">
+                            <label>
+                                <input class="subscription-input" type="text" name="user-name" placeholder="E-mail"/>
+                            </label>
+                            <button class="btn " type="submit"> <span class="subscription-text">Підписатися</span> 
+                                <svg class="subscription-avia" width="24px" height="24px">
+                                <use href="./images/icons.svg#avia"></use>
+                                </svg>
+                            </button>
+                        </div>
+                    </form>
                 </div>
             </footer>
         <script src="./js/modal.js"></script>
